Resolved issue of particle class not loading. Caused by order of script load in <script> section.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Osmosis Animation</title>
+  <script src="particle.js"></script>
   <script src="osmosis_animation.js"></script>
 </head>
 <body>
